@@ -7,6 +7,7 @@ vX.Y.Z (YYYY-MM-DD)
 - Add missing libraries to AppImage for gnuplot
 - Add fonts to Appimage for gnuplot
 - Replace readlink with realpath
+- Remove dependency on bc from sqlite3 post-process script
 
 v0.53.1 (2023-05-20)
 
